2015-07-30  Deniz Yuret  <dyuret@ku.edu.tr>

	* foo0729*: In both experiments the accuracy steadily went down.
	I think one problem is with batch normalization:

	* NORMALIZATION: Our loss function is similar to xentloss.
	XentLoss scales loss and gradients over the training batch, so the
	update size is independent of the training batch size.

	Note that training batch is different from parsing batch, number
	of sentences, etc.  train.jl defines these batch sizes:
	--strain: corpus is parsed strain sentences at a time.
	--pbatch: parser works on pbatch sentences in parallel.
	--nworkers: if multi-cpu, each cpu gets strain/nworkers sentences.
	this results in nworkers xy chunks each for strain/nworkers sentences.
	these chunks are fed to train.
	--tbatch: train processes these chunks tbatch instances at a time.
	xentloss uses the gradient

	   (y[i,j]-p[i,j])/tbatch

	where y[i,j] is the normalized output for move i instance j,
	i.e. sum_i y[i,j]=1, and p[i,j] is gold probabilities.  The loss
	function is

	   [sum_j [sum_i -p[i,j]*log(y[i,j])]]/tbatch

	i.e. we are computing per-training-instance loss and its gradient.
	sum_i (y[i,j]) = 1, so sum_j sum_i y[i,j] = tbatch, and the part
	of the gradient that comes from y is normalized to 1 for any
	training batch size.  We want the final step sizes to be
	independent of training batch size.

	In bparse the probabilities are over sentences and we are not
	doing any normalization.  We have ns sentences each with nb beams
	each with nt[s] moves.  We normalize probabilities over
	candidates, so forall s,t sum_b y[s,b,t]=1.  We create O(ns*nb*nt)
	instances.  The total y is sum_sbt y[s,b,t]=O(ns*nt).  Per
	instance y is between 1 and 1/nb.  We should use 1/tbatch as our
	scaling factor.

	Adding ScalLoss as a loss layer to do the scaling.  Testing on
	foo0730bp.net which is foo0729bp.net with an extra ScalLoss layer.
	After fixing the scaling problems lr=0.00011 seems to work best.
	Restarting yesterday's experiments:

