@@ -1,3 +1,4 @@
+include("testcalls.jl")
 include("testoparser.jl")
 include("testgparser.jl")
 include("testbparser.jl")
