@@ -10,24 +10,24 @@ ndeps = length(deprel)
 s1 = corpus[1]
 
 info("Single sentence")
-@date p1=oparse(pt, s1, ndeps)
+@date p1=oparse(pt, [s1], ndeps)
 info("with features")
-@date (p2,x2,y2)=oparse(pt, s1, ndeps, ft)
+@date pxy2=(p2,x2,y2)=oparse(pt, [s1], ndeps, ft)
 @test @show isequal(p2,p1)
 
 info("Multiple sentences")
 @date p3=oparse(pt, corpus, ndeps)
-@test @show isequal(p3[1],p2)
+@test @show isequal(p3[1],p2[1])
 info("with features")
-@date (p4,x4,y4)=oparse(pt, corpus, ndeps, ft)
+@date pxy4=(p4,x4,y4)=oparse(pt, corpus, ndeps, ft)
 @test @show isequal(p4, p3)
-I2 = 1:size(x2,2)
-@test @show isequal(x4[:,I2], x2)
-@test @show isequal(y4[:,I2], y2)
+I2 = 1:size(x2[1],2)
+@test @show isequal(x4[1][:,I2], x2[1])
+@test @show isequal(y4[1][:,I2], y2[1])
 
 info("Multi-cpu processing")
 @date p5=oparse(pt, corpus, ndeps; usepmap=true)
 @test @show isequal(p5,p4)
 info("with features")
-@date (p6,x6,y6)=oparse(pt, corpus, ndeps, ft; usepmap=true)
-@test @show isequal((p6,x6,y6), (p4,x4,y4))
+@date pxy6=(p6,x6,y6)=oparse(pt, corpus, ndeps, ft; usepmap=true)
+@test @show isequal(pxy6,pxy4)
